--- a/config-server/provider/application-dev8001.yml
+++ b/config-server/provider/application-dev8001.yml
@@ -7,4 +7,6 @@ eureka:
       defaultZone: http://eureka7002.com:7002/eureka/, http://eureka7001.com:7001/eureka
 server:
   port: 8001
+config:
+  info: config8001
 
