--- a/config-server/provider/application-dev8001.yml
+++ b/config-server/provider/application-dev8001.yml
@@ -9,4 +9,11 @@ server:
   port: 8001
 config:
   info: config8001
+# 暴露监控端点
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+
 
