--- a/config-server/customer/application-dev8080.yml
+++ b/config-server/customer/application-dev8080.yml
@@ -3,6 +3,11 @@ server:
 spring:
   application:
     name: service-customer
+  rabbitmq:
+    host: 192.168.160.128
+    port: 5672
+    username: guest
+    password: guest
 eureka:
   client:
     service-url:
