--- a/config-server/provider/application-dev8001.yml
+++ b/config-server/provider/application-dev8001.yml
@@ -1,6 +1,11 @@
 spring:
   application:
     name: service-provider
+  zipkin:
+    base-url: http://localhost:9411
+    sleuth:
+      sampler:
+        probability: 1
   rabbitmq:
     host: 192.168.160.128
     port: 5672
